# chatbi

./: .gitignore  .mise.toml  CHANGES_SUMMARY.md  README.md  extension.json  superset_config.py
backend/: .env.example  .gitignore  README_PERFORMANCE_IMPROVEMENTS.md  pyproject.toml  requirements.txt  run_server.py
backend/src/: demo_improvements.py  test_final_integration.py  test_integration.py
backend/src/chatbi_native/: __init__.py  agent.py  agent_dynamic.py  api.py  cache_manager.py  cached_mcp_client.py  config.py  db.py  mcp_client.py  performance.py  session_manager.py  tool_discovery.py  tools.py  user_context.py  validation_tools.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: ChatBIPanel.tsx  MessageBubble.tsx  ToolCallBadge.tsx  bootstrap.tsx  index.tsx  store.ts  types.ts
frontend/src/styles/: globals.css
